--- a/src/style.scss
+++ b/src/style.scss
@@ -5,5 +5,20 @@
 
 *{
   font-family: 'Ferrite';
+  color:white;
   font-size: 40px;
+}
+
+body{
+background: black;
+}
+
+.container{
+  background: rgba(0,0,0,0)
+}
+
+canvas{
+  border:5px solid rgb(74,246,38);
+  
+
 }
