--- a/src/style.scss
+++ b/src/style.scss
@@ -19,6 +19,23 @@ background: black;
 
 canvas{
   border:5px solid rgb(74,246,38);
-  
+
 
 }
+
+#loading{
+  height: 100vh;
+  font-size: 5em;
+
+
+}
+.hide{
+  display:  none;
+}
+
+#sound{
+  float: right;
+  font-size: 0.5em;
+}
+
+/* Safari 4.0 - 8.0 */
